# fast_api_learn

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml  revision.sh
auth/: auth.py  database.py  manager.py  schemas.py
migrations/: env.py  src_path.py
migrations/versions/: 1ee74f5e02c7_initial.py  2024_01_10_11:48_5c0e71079c86_.py  26a0d430a292_.py  39cb26c8830a_.py  3fa57c9fc0d0_db_creation.py  e0cd3b9cebf2_.py
models/: models.py
scripts/: rename_migration_file.py  revision.py
src/: config.py  database.py  main.py  models.py  routers.py  setting.py
src/auth/: config.py  manager.py  models.py  router.py  schemas.py
src/landing/: router.py
