[tool.poetry]
name = "fast-api-learn"
version = "0.1.0"
description = "FastAPI learning repo"
authors = ["SKY <sky012877@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
